k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-bun-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-bun
  template:
    metadata:
      labels:
        app: hello-bun
    spec:
      containers:
        - name: hello-bun
          image: kevcam7/hello-bun
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-bun-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: hello-bun
