k8s/hello-bun-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-bun-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: hello-bun
