k8s/bun.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-bun-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-bun
  template:
    metadata:
      labels:
        app: hello-bun
    spec:
      containers:
        - name: hello-bun
          image: kevcam7/hello-bun
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-bun-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: hello-bun
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-bun-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: bun.hello.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-bun-service
            port:
              number: 8080
